--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ludo-game": "node dist/ludo-game/server/server.mjs"
+    "serve:ssr:ludo-game": "node dist/ludo-game/server/server.mjs",
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.{ts,scss,html}\"",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
+    "@angular/core": "^18.2.11",
     "@angular/forms": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser": "^18.2.11",
     "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
+    "@angular/platform-server": "^18.2.11",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.8",
     "express": "^4.18.2",
@@ -33,12 +36,23 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^8.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.48",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.5.2"
   }
 }
